--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,17 @@
   justify-content: center;
   align-items: center;
 }
+
+.flex-start {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: start;
+  align-items: center;
+}
+
+.flex-end {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: end;
+  align-items: center;
+}
